src/objects/Billing__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Charge_Details__c</fullName>
        <label>Additional Charge Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fixed_Charge__c</fullName>
        <label>Fixed Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Billing</relationshipLabel>
        <relationshipName>Billing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Charge__c</fullName>
        <label>Total Charge</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Billing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Billing-{00000}</displayFormat>
        <label>Billing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>